Added comments and made the titles of each page relevant

--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <title>$Title$</title>
+    <title>Contact Us</title>
 </head>
+<!--Body-->
 <body>
     <script src="/assets/JavaScript/header.js"></script>
     <div class="contact-container">
         <iframe src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d788.2616812567451!2d175.27931686398273!3d-37.78894473592109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6d18a57fa16281%3A0x72b05e2e8812d179!2sWaikato%20Institute%20of%20Technology%2C%20City%20Campus!5e0!3m2!1sen!2snz!4v1652321876385!5m2!1sen!2snz" width="1903" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="contact-page">
+<!--            Contact header-->
             <div class="contact-header">
                 <h1>Contact us</h1>
                 <div>
@@ -18,19 +20,20 @@
                     <br>
                     <hr style="height:1px;
                         width: 50%;
-                        text-align:center;
                         size:2px;
                         margin: auto;
                         colour:grey;
-                        background-colour:grey">
+                        background-colour:grey"
+                    >
                 </div>
             </div>
             <div class="contact-column">
                 <div class="contact-side">
+<!--                    Contact Info-->
                     <div class="ContactInfo">
                         <div class="contact-text">
                             <h2>Contact Details</h2>
-                            <h3>Phone Number: <a href="tel:+15555555555">+1 555 555 5555</a><br></h3>
+                            <h3>Phone Number: <a href="tel:+15555555555">(+1)555 555 5555</a><br></h3>
                             <h3>Physical Address</h3>
                             <a>Tristram Street,Whitiora,<br> Hamilton 3200, <br> New Zealand</a>
                         </div>
@@ -41,6 +44,7 @@
                 <div class="contact-column">
                     <div class="contact-main">
                         <div class="wrapper">
+<!--                            Starting of Contact Form-->
                             <h2>Contact form</h2>
                             <div id="error_message">
                             </div>
@@ -68,6 +72,7 @@
         </div>
         <script src="assets/JavaScript/ContactformValidation.js"></script>
     </div>
+<!--    End of Body-->
     <!--footer-->
     <script src="/assets/JavaScript/footer.js"></script>
 </body>
