--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
     </div>
     </div>
 
-        <!-- Body  -->
+        <!-- End of Body  -->
     <script src="/assets/JavaScript/footer.js"></script>
 </body>
 </html>
