--- a/staff.html
+++ b/staff.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <title>Amazing wow</title>
+    <title>Staff</title>
 </head>
 <body>
     <script src="/assets/JavaScript/header.js"></script>
@@ -23,6 +23,7 @@
         </div>
     </br>
         <div class="staffRow">
+<!--            Staff images and info-->
             <div class="staffColumn">
                 <div class="staffCard">
                     <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan">
@@ -78,8 +79,8 @@
         </div>
     </div>
     </br>
-    <!---->
-    <!-- Body  -->
+
+    <!-- End of Body  -->
     <!--<footer>-->
     <script src="/assets/JavaScript/footer.js"></script>
 </body>
