--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <title>Amazing wow</title>
+    <title>FAQ</title>
 </head>
 <body>
     <script src="/assets/JavaScript/header.js"></script>
