--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel=" stylesheet" href="homeStyle.css">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-        <title>Amazing wow</title>
+        <title>Front Page</title>
     </head>
     <body>
     <script src="/assets/JavaScript/header.js"></script>
