--- a/about.html
+++ b/about.html
@@ -14,28 +14,47 @@
         <section class="faq-container">
             <div class="faq-one">
                 <!-- faq question -->
-                <h1 class="faq-page">FaQ 1</h1>
+                <h1 class="faq-page">What is Spaghetti Code?</h1>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p>FaQ1 answer</p>
+                    <br>
+                    <p>We are a Game development company that makes a plethora of games. Our goal is to make games fun for everyone and make dreams into reality.</p>
+                    <br>
                 </div>
             </div>
             <hr class="hr-line">
             <div class="faq-two">
                 <!-- faq question -->
-                <h1 class="faq-page">FaQ 2</h1>
+                <h1 class="faq-page">Most Popular Game?</h1>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p>FaQ2 answer</p>
+                    <br>
+                    <p>Our most popular game is BRICK WORLD!</p>
+                    <p>Brick world is an MMO RPG Sandbox. Build, Break, Grow only your imagination is the limit.</p>
+                    <br>
                 </div>
             </div>
             <hr class="hr-line">
             <div class="faq-three">
                 <!-- faq question -->
-                <h1 class="faq-page">FaQ3</h1>
+                <h1 class="faq-page">Recommended specs for games!</h1>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p>FaQ3 answer</p>
+                    <br>
+                    <p><strong>We try to meet these specs and try to be more inclusive throughout our game requirements</strong></p>
+                    <br>
+                    <p><strong>MINIMUM:</strong><br><br>
+
+                        Requires a 64-bit processor and operating system<br>
+                        OS: Windows 7 SP1+<br>
+                        Processor: SSE2 instruction set support<br>
+                        Graphics: Graphics card with DX10 (shader model 4.0) capabilities.<br>
+                        Storage: 1 GB available space<br><br>
+
+                        <strong>RECOMMENDED:</strong><br><br>
+                        Requires a 64-bit processor and operating system
+                    </p>
+                    <br><br>
                 </div>
             </div>
             <hr class="hr-line">
@@ -203,8 +222,9 @@
 
         </div>
 
-        <button class="ticket-btn" id="ticket-btn">Submit a Ticket</button>
-
+<!--        <div class="ticket-div">-->
+            <button class="ticket-btn" id="ticket-btn">Submit a Ticket</button>
+<!--        </div>-->
     </main>
 
 
