Changed the search bar and changed descriptions

--- a/game.html
+++ b/game.html
@@ -21,21 +21,21 @@
         <div class="img-container">
             <img
                     src="/assets/snacko.jpg"
-                    alt="snacko is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    alt="Lift a curse and revitalize a ruined island in Snacko, where former big city kitties Momo and Mikan are starting a new life! Grow crops, raise fluffy cows, go fishing, exploring, customize and decorate as you please, and much, much more in this farming cat-venture."
                     data-original="/assets/snacko.jpg"
             />
         </div>
         <div class="img-container">
             <img
                     src="/assets/brick-world-thumbnail.jpg"
-                    alt="brick is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    alt="Brick world is an open-world 2D sandbox game in which you help out towns with figuring out their architecture and sometimes with their gathering of resources for their towns."
                     data-original="/assets/brick-world-thumbnail.jpg"
             />
         </div>
         <div class="img-container">
             <img
                     src="/assets/keywe-key-art.jpg"
-                    alt="Unpacking is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    alt="KeyWe is a cute, co-operative postal puzzler starring Jeff and Debra, two small kiwi birds working in a whimsical post office. They must jump, flap, peck and butt-slam their way across an interactive landscape of levers, bells and buttons to get those messages delivered on time!"
                     data-original="/assets/keywe-key-art.jpg"
             />
         </div>
